syntax = "proto3";
package ganymede.postoffice;

option go_package = "github.com/jack139/ganymede/ganymede/x/postoffice/types";

message TimedoutPost {
  uint64 id = 1;
  string title = 2; 
  string toChain = 3; 
  string sender = 4; 
  string receiver = 5; 
  string sentDate = 6; 
  string linkSender = 7; 
  string linkReceiver = 8; 
  
}
